Changelog for Peoples.

Peoples 1.0.0
====================================
- Initial commit