@@ -49,3 +49,20 @@ $_lang['prop_peoples.outputseparator_desc'] = 'The separator between each user r
 $_lang['prop_peoples.toplaceholder_desc'] = 'Optional. If set, will set the output to this placeholder and return empty.';
 $_lang['prop_peoples.userclass_desc'] = 'The class name of the Users object.';
 $_lang['prop_peoples.useralias_desc'] = 'The class alias of the Users object.';
+
+
+/* PeopleGroups */
+$_lang['prop_peoples.tpl_desc'] = 'The Chunk to use for each User Group.';
+$_lang['prop_peoples.user_desc'] = 'Optional. If an ID of a User is specified, will only show User Groups for that User.';
+$_lang['prop_peoples.limit'] = 'The number of users to limit per call. Defaults to 10. Set to 0 to show all.';
+$_lang['prop_peoples.start'] = 'The start index to begin with when limiting.';
+$_lang['prop_peoples.sortby'] = 'The field name to sort by.';
+$_lang['prop_peoples.sortbyalias'] = 'The class to use with the sort field.';
+$_lang['prop_peoples.sortdir'] = 'The direction to sort by.';
+$_lang['prop_peoples.cls'] = 'Optional. If set, will append this CSS class to each item.';
+$_lang['prop_peoples.altcls'] = 'Optional. If set, will append this CSS class to every even item.';
+$_lang['prop_peoples.firstcls'] = 'Optional. If set, will append this CSS class to the first item.';
+$_lang['prop_peoples.lastcls'] = 'Optional. If set, will append this CSS class to the last item.';
+$_lang['prop_peoples.placeholderprefix_desc'] = 'The prefix to use when setting global placeholders, such as total.';
+$_lang['prop_peoples.outputseparator_desc'] = 'The separator between each user record.';
+$_lang['prop_peoples.toplaceholder_desc'] = 'Optional. If set, will set the output to this placeholder and return empty.';
